fix suppression of scrollbars when game is lost

--- a/src/index.css
+++ b/src/index.css
@@ -165,7 +165,7 @@ nav,
   z-index: 0;
 }
 
-#root:has(#game .game-lost) {
+#root:has(#playground .game-lost) {
   /* prevent scrollbars when mines explode */
   overflow: hidden;
 }
